fixed settings spacings; removed Recent Links header on Create page

--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -1225,6 +1225,10 @@ p.body { @extend p.body-text; }
 	padding-bottom: $double * 4;
 }
 
+._isPublic #create-link-container {
+	padding-bottom: 0;
+}
+
 .create-private-link {
     @include respond-tablet {
 	    padding-bottom: $grid * 3;
